fixed index spacing

--- a/app/assets/stylesheets/api/videos/_index.scss
+++ b/app/assets/stylesheets/api/videos/_index.scss
@@ -45,6 +45,7 @@
     width: 100%;
     bottom: 0;
     flex-wrap: wrap;
+    align-content: flex-start;
 }
 
 .video-preview{
